--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1111,6 +1111,30 @@
   url       = {https://www.aaai.org/ocs/index.php/FSS/FSS10/paper/view/2305},
 }
 
+@Electronic{AllezCannes2022,
+  author       = {{AllezCannes}},
+  month        = {07},
+  year         = {2022},
+  title        = {The Wire started airing about 20 years ago. To celebrate, I created a network analysis to examine the relationships between the characters},
+  howpublished = {\url{https://www.reddit.com/r/dataisbeautiful/comments/w7grup/oc_the_wire_started_airing_about_20_years_ago_to/}},
+  organization = {Reddit},
+  url          = {https://www.reddit.com/r/dataisbeautiful/comments/w7grup/oc_the_wire_started_airing_about_20_years_ago_to/},
+  owner        = {Vincent},
+  timestamp    = {2022.08.16},
+}
+
+@Electronic{AllezCannes2022a,
+  author       = {{AllezCannes}},
+  month        = {08},
+  year         = {2022},
+  title        = {A network analysis of Season 2 of The Wire},
+  howpublished = {\url{https://www.reddit.com/r/dataisbeautiful/comments/wocceo/oc_a_network_analysis_of_season_2_of_the_wire/}},
+  organization = {Reddit},
+  url          = {https://www.reddit.com/r/dataisbeautiful/comments/wocceo/oc_a_network_analysis_of_season_2_of_the_wire/},
+  owner        = {Vincent},
+  timestamp    = {2022.08.16},
+}
+
 @Article{Allison2011,
   author    = {Allison, S. and Heuser, R. and Jockers, M. and Moretti, F. and Witmore, M.},
   title     = {Quantitative formalism: an experiment},
@@ -1451,6 +1475,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=2107654},
+}
+
+@Book{Anderson1976,
+  title     = {Language, Memory, and Thought},
+  publisher = {Psychology Press},
+  year      = {1976},
+  author    = {Anderson, J. R.},
+  doi       = {10.4324/9780203780954},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @PhdThesis{Anderson1999,
@@ -3875,6 +3909,16 @@
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.aclweb.org/anthology/D12-1091/},
+}
+
+@Book{Bergson1901,
+  title     = {The world of dreams},
+  publisher = {Philosophical Library},
+  year      = {1901},
+  author    = {Bergson, H.},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+  url       = {https://books.google.fr/books/?id=OXeMBAAAQBAJ},
 }
 
 @Article{Berhe2019,
@@ -6947,6 +6991,31 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.aaai.org/ocs/index.php/FLAIRS/FLAIRS13/paper/view/5862},
 }
 
+@Article{Calkins1893,
+  author    = {Calkins, M. W.},
+  title     = {Statistics of dreams},
+  journal   = {American Journal of Psychology},
+  year      = {1893},
+  volume    = {5},
+  number    = {3},
+  pages     = {311-343},
+  doi       = {10.2307/1410996},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
+@InCollection{Calkins1961,
+  author    = {Calkins, M. W.},
+  title     = {Mary Whiton Calkins},
+  booktitle = {A history of psychology in autobiography},
+  publisher = {Russel \& Russel.},
+  year      = {1961},
+  pages     = {31-62},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+  url       = {https://www.apa.org/pubs/books/4316091},
+}
+
 @Book{Callaghan2003,
   title     = {William Shakespeare: Romeo and Juliet: Texts and Contexts},
   publisher = {Bedford/St. Martin's},
@@ -7300,6 +7369,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1371/journal.pone.0114172},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Article{Carney2017,
+  author    = {Carney, J. and Mac Carron, P.},
+  title     = {Comic-Book Superheroes and Prosocial Agency: A Large-Scale Quantitative Analysis of the Effects of Cognitive Factors on Popular Representations},
+  journal   = {Journal of Cognition and Culture},
+  year      = {2017},
+  volume    = {17},
+  number    = {3-4},
+  pages     = {306-330},
+  doi       = {10.1163/15685373-12340009},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
 }
 
 @InCollection{Carrington2011,
@@ -9088,6 +9170,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.jstor.org/stable/24615419},
 }
 
+@PhdThesis{Cleary2018,
+  author    = {Cleary, C.},
+  title     = {An investigation of the Remscéla Tána Bó Cúailnge and an edition and translation of Aislinge Óenguso with textual notes},
+  school    = {Trinity College Dublin},
+  year      = {2018},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {http://www.tara.tcd.ie/bitstream/handle/2262/83800/C.%20Cleary.%20PhD%20Diss.%20.pdf},
+}
+
 @Article{Clement2008,
   author    = {Clement, T. E.},
   title     = {'A thing not beginning and not ending': Using digital tools to distant-read Gertrude Stein's The Making of Americans},
@@ -9865,6 +9958,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {http://www.dlib.org/dlib/march06/crane/03crane.html},
+}
+
+@Article{Crick1983,
+  author    = {Crick, F. and Mitchison, G.},
+  title     = {The function of dream sleep},
+  journal   = {Nature},
+  year      = {1983},
+  volume    = {304},
+  number    = {5922},
+  pages     = {111-114},
+  doi       = {10.1038/304111a0},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Article{Cristelli2012,
@@ -10685,6 +10791,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1002/(sici)1097-4571(199009)41:6<391::aid-asi1>3.0.co;2-9},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Deese_1959,
+  author    = {Deese, J.},
+  title     = {On the prediction of occurrence of particular verbal intrusions in immediate recall},
+  journal   = {Journal of Experimental Psychology},
+  year      = {1959},
+  volume    = {58},
+  number    = {1},
+  pages     = {17-22},
+  doi       = {10.1037/h0046671},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @PhdThesis{DeFazio2012,
@@ -12294,6 +12413,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.11.17},
 }
 
+@Article{Dunbar2018,
+  author    = {Dunbar, R. I. M. and Mac Carron, P.},
+  title     = {Does a trade-off between fertility and predation risk explain social evolution in baboons?},
+  journal   = {Journal of Zoology},
+  year      = {2018},
+  volume    = {308},
+  pages     = {9-15},
+  doi       = {10.1111/jzo.12644},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
 @Article{Dunbar2020,
   author    = {Dunbar, R. I. M.},
   title     = {Structure and function in human and primate social networks: implications for diffusion, network stability and health},
@@ -12305,6 +12436,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1098/rspa.2020.0446},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Book{Dundes1984,
+  title     = {Sacred narrative: Readings in the theory of myth},
+  publisher = {University of California Press},
+  year      = {1984},
+  author    = {Dundes, A.},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://books.google.fr/books/?id=l5Om2ALAFbEC},
 }
 
 @Article{Dunham2016,
@@ -16020,6 +16161,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.oxfordreference.com/view/10.1093/oi/authority.20110803095736688},
 }
 
+@TechReport{Gauthier2022,
+  author      = {Gauthier, L.},
+  title       = {Sophocles's Play: Greek Theater and Psychological Game Theory},
+  institution = {Université Paris 8 Vincennes-Saint-Denis},
+  year        = {2022},
+  type        = {Research Report},
+  owner       = {Vincent},
+  timestamp   = {2022.08.30},
+  url         = {https://hal-univ-paris8.archives-ouvertes.fr/hal-03754913},
+}
+
 @InProceedings{Ge2009,
   author    = {Ge, W. and Collins, R. T. and Ruback, B.},
   title     = {Automatically detecting the small group structure of a crowd},
@@ -16170,7 +16322,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 }
 
 @Article{GesseyJones2020,
-  author    = {Gessey-Jones, T. and Connaughton, C. and Dunbar, R. and Kenna, R. and MacCarron, P. and O'Conchobhair, C. and Yose, J.},
+  author    = {Gessey-Jones, T. and Connaughton, C. and Dunbar, R. and Kenna, R. and Mac Carron, P. and O'Conchobhair, C. and Yose, J.},
   title     = {Narrative structure of A Song of Ice and Fire creates a fictional world with realistic measures of social complexity},
   journal   = {Proceedings of the National Academy of Sciences},
   year      = {2020},
@@ -16681,6 +16833,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1109/cvpr.2019.01144},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Article{Goff_1998,
+  author    = {Goff, L. M. and Roediger, H. L.},
+  title     = {Imagination inflation for action events: Repeated imaginings lead to illusory recollections},
+  journal   = {Memory \& Cognition},
+  year      = {1998},
+  volume    = {26},
+  pages     = {20-33},
+  doi       = {10.3758/bf03211367},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @InProceedings{Goh2012,
@@ -18599,6 +18763,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.12.31},
   url       = {https://www.ynharari.com/fr/book/dapres-sapiens/},
+}
+
+@Book{Harari2016,
+  title     = {Homo Deus: A Brief History of Tomorrow},
+  publisher = {Vintage},
+  year      = {2016},
+  author    = {Harari, Y. N.},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://www.ynharari.com/fr/book/homo-deus/},
 }
 
 @Article{Harary1953,
@@ -21604,6 +21778,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@Article{Janickyj2022,
+  author        = {Janickyj, M. and Curley, D. and Mac Carron, P. and Mccarthy, M. and Yose, J. and Kenna, R.},
+  title         = {The enigmatic {Fraoch} and his eponymous tale - Network analysis of an early {Irish} heroic romance},
+  journal       = {Advances in Complex Systems},
+  year          = {2022},
+  volume        = {in press},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1142/s0219525922400069},
+  owner         = {Vincent},
+  timestamp     = {2022.08.06},
+}
+
 @InProceedings{Jannidis2016,
   author    = {Jannidis, F. and Reger, I. and Krug, M. and Weimer, L. and Macharowsky, L. and Puppe, F.},
   title     = {Comparison of Methods for the Identification of Main Characters in German Novels},
@@ -22722,7 +22908,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Electronic{Kaminski2012,
-  author       = {Kaminski, Jermain and Schober, Michael and Zastupailo, Oleksandr and Hidalgo, César},
+  author       = {Kaminski, J. and Schober, M. and Zastupailo, O. and Hidalgo, C.},
   month        = {Dec},
   year         = {2012},
   title        = {Moviegalaxies - Social Networks in Movies},
@@ -23170,7 +23356,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InCollection{Kenna2017,
-  author    = {Kenna, R. and MacCarron, P.},
+  author    = {Kenna, R. and Mac Carron, P.},
   title     = {A Networks Approach to Mythological Epics},
   booktitle = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
   publisher = {Springer},
@@ -23182,7 +23368,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Collection{Kenna2017a,
-  author    = {Kenna, R. and MacCarron, M. and MacCarron, P.},
+  author    = {Kenna, R. and Mac Carron, M. and Mac Carron, P.},
   title     = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
   year      = {2017},
   doi       = {10.1007/978-3-319-39445-9},
@@ -23203,6 +23389,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/1467-6451.00168},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Kent_1910,
+  author    = {Kent, G. H. and Rosanoff, A. J.},
+  title     = {A Study of Association in Insanity},
+  journal   = {American Journal of Psychiatry},
+  year      = {1910},
+  volume    = {67},
+  number    = {1},
+  pages     = {37-96},
+  doi       = {10.1176/ajp.67.1.37},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Electronic{Ker2018,
@@ -23906,6 +24105,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://epub.uni-regensburg.de/50828/},
 }
 
+@Article{Kleinfeld2002a,
+  author    = {Kleinfeld, J. S.},
+  title     = {The small world problem},
+  journal   = {Society},
+  year      = {2002},
+  volume    = {39},
+  number    = {2},
+  pages     = {61-66},
+  doi       = {10.1007/bf02717530},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Article{Klemm2002,
   author    = {Klemm, K. and Eguiluz, V. M.},
   title     = {Growing scale-free networks with small-world behavior},
@@ -24299,6 +24511,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/s0923-5965(00)00011-4},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Kordsmeyer2017,
+  author    = {Kordsmeyer, T. and Mac Carron, P. and Dunbar, R. I. M.},
+  title     = {Sizes of Permanent Campsite Communities Reflect Constraints on Natural Human Communities},
+  journal   = {Current Anthropology},
+  year      = {2017},
+  volume    = {58},
+  number    = {2},
+  pages     = {289-294},
+  doi       = {10.1086/690731},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
 }
 
 @Article{Koren2009,
@@ -25532,6 +25757,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://m.armand-colin.com/la-science-fiction-9782200269210},
 }
 
+@Article{Langlois1990,
+  author    = {Langlois, J. H. and Roggman, L. A.},
+  title     = {Attractive Faces Are Only Average},
+  journal   = {Psychological Science},
+  year      = {1990},
+  volume    = {1},
+  number    = {2},
+  pages     = {115-121},
+  doi       = {10.1111/j.1467-9280.1990.tb00079.x},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Article{Langmead2016,
   author    = {Langmead, A. and Otis, J. M. and Warren, C. N. and Weingart, S. B. and Zilinksi, L. D.},
   title     = {Towards Interoperable Network Ontologies for the Digital Humanities},
@@ -25886,6 +26124,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.patrec.2018.06.017},
   owner     = {Vincent},
   timestamp = {2019.03.12},
+}
+
+@Book{Leahy1906,
+  title     = {Heroic Romances in Ireland},
+  publisher = {David Nutt},
+  year      = {1906},
+  author    = {Leahy, A. H.},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://www.gutenberg.org/ebooks/5678},
 }
 
 @Article{Ledger1994,
@@ -28623,6 +28871,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.12.06},
 }
 
+@Book{Lyle2012,
+  title     = {Ten Gods: A New Approach to Defining the Mythological Structures of the Indo-Europeans},
+  publisher = {Cambridge Scholars Publishing},
+  year      = {2012},
+  author    = {Lyle, E.},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://www.cambridgescholars.com/product/978-1-4438-4156-6},
+}
+
 @Book{Lynch2007,
   title     = {Introduction to Applied Bayesian Statistics and Estimation for Social Scientists},
   publisher = {Springer},
@@ -28836,7 +29094,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @PhdThesis{MacCarron2014,
-  author      = {MacCarron, P.},
+  author      = {Mac Carron, P.},
   title       = {A Network Theoretic Approach to Comparative Mythology},
   year        = {2014},
   type        = {PhD Thesis},
@@ -28870,6 +29128,43 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.17},
 }
 
+@Article{MacCarron2016a,
+  author    = {Mac Carron, P. and Dunbar, R. I. M.},
+  title     = {Identifying natural grouping structure in gelada baboons: a network approach},
+  journal   = {Animal Behaviour},
+  year      = {2016},
+  volume    = {114},
+  pages     = {119-128},
+  doi       = {10.1016/j.anbehav.2016.01.026},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
+@Article{MacCarron2016b,
+  author    = {Mac Carron, P. and Kaski, K. and Dunbar, R.},
+  title     = {Calling Dunbar's numbers},
+  journal   = {Social Networks},
+  year      = {2016},
+  volume    = {47},
+  pages     = {151-155},
+  doi       = {10.1016/j.socnet.2016.06.003},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
+@Article{MacCarron2020,
+  author    = {Mac Carron, P. and Maher, P. J. and Fennell, S. and Burke, K. and Gleeson, J. P. and Durrheim, K. and Quayle, M.},
+  title     = {Agreement threshold on Axelrod's model of cultural dissemination},
+  journal   = {PLoS ONE},
+  year      = {2020},
+  volume    = {15},
+  number    = {6},
+  pages     = {e0233995},
+  doi       = {10.1371/journal.pone.0233995},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
 @Article{MacEachren2005,
   author    = {MacEachren, A. M. and Robinson, A. and Hopper, S. and Gardner, S. and Murray, R. and Gahegan, M. and Hetzler, E.},
   title     = {Visualizing Geospatial Information Uncertainty: What We Know and What We Need to Know},
@@ -28891,6 +29186,26 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://rowman.com/ISBN/9780847682546/Talking-Trojan-Speech-and-Community-in-the-Iliad},
+}
+
+@Book{MacKillop1998,
+  title     = {A dictionary of Celtic mythology},
+  publisher = {Oxford University Press},
+  year      = {1998},
+  author    = {MacKillop, J.},
+  doi       = {10.1093/acref/9780198609674.001.0001},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
+@Book{MacKillop2005,
+  title     = {Myths and Legends of the Celts},
+  publisher = {Penguin},
+  year      = {2005},
+  author    = {MacKillop, J.},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://books.google.fr/books/?id=RVJtQgAACAAJ},
 }
 
 @InProceedings{Madaan2018,
@@ -28948,6 +29263,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.14778/2732977.2732978},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Book{Magan2020,
+  title     = {Thirty-Two Words for Field: Lost Words of the Irish Landscape},
+  publisher = {Gill \& Macmillan},
+  year      = {2020},
+  author    = {Magan, M.},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://www.manchan.com/32-words-for-field},
 }
 
 @InProceedings{Magnani2011,
@@ -30271,6 +30596,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.worldcat.org/title/irish-annals-their-genesis-evolution-and-history/oclc/214309762},
 }
 
+@Article{McCarthy2018,
+  author    = {McCarthy, M. and Curley, D.},
+  title     = {Exploring the nature of the Fráoch saga - An examination of associations with the legendary warrior on Mag naí},
+  journal   = {Emania},
+  year      = {2018},
+  pages     = {53-62},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
 @Article{McCarty2002,
   author    = {McCarty, W.},
   title     = {Humanities Computing: Essential Problems, Experimental Practice},
@@ -30601,6 +30936,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2505515.2505695},
   owner     = {Vincent},
   timestamp = {2022.07.08},
+}
+
+@Article{McNamara1996,
+  author    = {McNamara, P.},
+  title     = {Bergson's theory of dreaming.},
+  journal   = {Dreaming},
+  year      = {1996},
+  volume    = {6},
+  number    = {3},
+  pages     = {173-186},
+  doi       = {10.1037/h0094453},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Article{McNamara2005,
@@ -32878,6 +33226,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@Article{Naldi2022,
+  author        = {Naldi, M. and Dalla Torre, P.},
+  title         = {Uncovering the Narrative Structure of ``Breaking Bad'' Through a Multi-Dimensional Quantitative Analysis},
+  journal       = {Series - International Journal of TV Serial Narratives},
+  year          = {2022},
+  volume        = {8},
+  number        = {1},
+  pages         = {17-32},
+  __markedentry = {[Vincent:]},
+  doi           = {10.6092/ISSN.2421-454X/14503},
+  owner         = {Vincent},
+  timestamp     = {2022.08.06},
+}
+
 @InProceedings{Nalisnick2013,
   author    = {Nalisnick, E. T. and Baird, H. S.},
   title     = {Character-to-Character Sentiment Analysis in {Shakespeare}'s Plays},
@@ -33758,6 +34120,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.20},
 }
 
+@Article{Nielsen_1993,
+  author    = {Nielsen, T. A.},
+  title     = {Changes in the kinesthetic content of dreams following somatosensory stimulation of leg muscles during {REM} sleep},
+  journal   = {Dreaming},
+  year      = {1993},
+  volume    = {3},
+  number    = {2},
+  pages     = {99-113},
+  doi       = {10.1037/h0094374},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @InProceedings{Nielsen2011,
   author    = {Nielsen, F. A.},
   title     = {A new ANEW: Evaluation of a word list for sentiment analysis in microblogs},
@@ -34117,6 +34492,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.semanticscholar.org/paper/Diegetic-and-Mimetic-Narrativity%3A-Some-further-a-of-N%C3%BCnning-Sommer/1a6bc249ae362f6ceaf7933aba5c510cc5fd7154},
+}
+
+@TechReport{Nusbaum1984,
+  author      = {Nusbaum, H. C. and Pisoni, D. B. and Davis, C. K.},
+  title       = {Sizing up the Hoosier mental lexicon: Measuring the familiarity of 20,000 words},
+  institution = {Speech Research Laboratory, Department of Psychology, Indiana University},
+  year        = {1984},
+  type        = {Technical Report},
+  number      = {Research on Speech Perception Progress Rep. No. 10},
+  owner       = {Vincent},
+  timestamp   = {2022.08.11},
+  url         = {https://www.semanticscholar.org/paper/Sizing-up-the-Hoosier-Mental-Lexicon%3A-Measuring-the-Nusbaum/d0dfc5be92a49e9de8d819d0a6e1aa8484d9e250},
 }
 
 @Book{Nutt1900,
@@ -35836,6 +36223,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2016.07.25},
 }
 
+@MastersThesis{Petty2022,
+  author    = {Petty, T.},
+  title     = {Agonistic Structure in the Harry Potter Series},
+  school    = {Masarykova Univerzita},
+  year      = {2022},
+  type      = {BA Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.08.12},
+  url       = {https://is.muni.cz/th/qnxxl/475225_Tomas_Petty_BA_thesis.pdf},
+}
+
 @Article{Pfeffer2012,
   author    = {Pfeffer, J. and Carley, K. M.},
   title     = {Rapid modeling and analyzing networks extracted from pre-structured news articles},
@@ -37517,6 +37915,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://escholarship.org/uc/item/93z910gg},
 }
 
+@Article{Rechtschaffen1965,
+  author    = {Rechtschaffen, A. and Foulkes, D.},
+  title     = {Effect of Visual Stimuli on Dream Content},
+  journal   = {Perceptual and Motor Skills},
+  year      = {1965},
+  volume    = {20},
+  number    = {3suppl},
+  pages     = {1149-1160},
+  doi       = {10.2466/pms.1965.20.3c.1149},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @Article{Reda2011,
   author    = {Reda, K. and Tantipathananandh, C. and Johnson, A. and Leigh, J. and Berger-Wolf, T.},
   title     = {Visualizing the Evolution of Community Structures in Dynamic Social Networks},
@@ -37835,6 +38246,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://benjamins.com/catalog/scl.9},
+}
+
+@Article{Requiao2020,
+  author    = {Requião, B. da Cunha and Mac Carron, P. and Passold, J. F. and Walmocyr dos Santos, L. and Oliveira, K. A. and Gleeson, J. P.},
+  title     = {Assessing police topological efficiency in a major sting operation on the dark web},
+  journal   = {Scientific Reports},
+  year      = {2020},
+  volume    = {10},
+  pages     = {73},
+  doi       = {10.1038/s41598-019-56704-4},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
+@PhdThesis{Retzlaff2004,
+  author    = {Retzlaff, K. L.},
+  title     = {Creating the World of the Táin through the Remscéla: Prologemena to Reading},
+  school    = {University of Maine},
+  year      = {2004},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+  url       = {https://digitalcommons.library.umaine.edu/etd/1012/},
 }
 
 @InProceedings{Revi2020,
@@ -39297,6 +39731,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/papers/L/L10/L10-1297/},
 }
 
+@TechReport{Russell1954,
+  author      = {Russell, W. A. and Jenkins, J. J.},
+  title       = {The complete Minnesota norms for responses to 100 words from the Kent-Rosanoff Word Association Test},
+  institution = {University of Minnesota},
+  year        = {1954},
+  type        = {Technical Report},
+  number      = {11},
+  owner       = {Vincent},
+  timestamp   = {2022.08.11},
+  url         = {https://www.worldcat.org/title/complete-minnesota-norms-for-responses-to-100-words-from-the-kent-rosanoff-word-association-test/oclc/6801978},
+}
+
 @Book{Russell2002,
   title     = {Romantic Sociability : Social Networks and Literary Culture in Britain, 1770-1840},
   publisher = {Cambridge University Press},
@@ -39917,6 +40363,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.05.24},
 }
 
+@InProceedings{Sang2022,
+  author    = {Sang, Y. and Mou, X. and Yu, M. and Wang, D. and Li, J. and Stanton, J.},
+  title     = {Machine Narrative Comprehension in Fictional Characters Personality Prediction Task},
+  booktitle = {NAACL Student Research Workshop},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.08.06},
+  url       = {https://naacl2022-srw.github.io/non_arch_papers/72.pdf},
+}
+
 @Article{Sanjek1974,
   author    = {Sanjek, R.},
   title     = {What is network analysis, and what is it good for?},
@@ -40021,6 +40477,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=OJFrAAAAIAAJ},
 }
 
+@Article{Sarkanych2017,
+  author    = {Sarkanych, P. and Holovatch, Y. and Kenna, R.},
+  title     = {Exact solution of a classical short-range spin model with a phase transition in one dimension: The Potts model with invisible states},
+  journal   = {Physics Letters A},
+  year      = {2017},
+  volume    = {381},
+  number    = {41},
+  pages     = {3589-3593},
+  doi       = {10.1016/j.physleta.2017.08.063},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
 @PhdThesis{Sarkanych2020,
   author    = {Sarkanych, P.},
   title     = {Universality of complex systems: partition function zeros analysis and complex networks},
@@ -40033,15 +40502,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Sarkanych2022,
-  author    = {Sarkanych, P. and Fedorak, N. and Holovatch, Y. and MacCarron, P. and Yose, J. and Kenna, R.},
-  title     = {Network analysis of the Kyiv bylyny cycle - East Slavic epic narratives},
-  journal   = {arXiv},
+  author    = {Sarkanych, P. and Fedorak, N. and Holovatch, Y. and Mac Carron, P. and Yose, J. and Kenna, R.},
+  title     = {Network analysis of the {Kyiv Bylyny} cycle - East {Slavic} epic narratives},
+  journal   = {Advances in Complex Systems},
   year      = {2022},
-  volume    = {physics.soc-ph},
-  pages     = {2203.10399},
+  volume    = {in press},
+  doi       = {10.1142/S0219525922400070},
   owner     = {Vincent},
   timestamp = {2022.03.25},
-  url       = {https://arxiv.org/abs/2203.10399},
 }
 
 @Article{Sarkar2005,
@@ -42601,6 +43069,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Solomonoff1951,
+  author    = {Solomonoff, R. and Rapoport, A.},
+  title     = {Connectivity of random nets},
+  journal   = {Bulletin of Mathematical Biophysics},
+  year      = {1951},
+  volume    = {13},
+  number    = {2},
+  pages     = {107-117},
+  doi       = {10.1007/bf02478357},
+  groups    = {_Misc Wo/C},
+  owner     = {Vincent},
+  timestamp = {2022.02.19},
+}
+
 @Article{Somandepalli2018,
   author    = {Somandepalli, K. and Kumar, N. and Guha, T. and Narayanan, S. S.},
   title     = {Unsupervised Discovery of Character Dictionaries in Animation Movies},
@@ -42990,6 +43472,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://jasss.soc.surrey.ac.uk/5/1/4.html},
 }
 
+@Article{Stauffer2004,
+  author    = {Stauffer, D.},
+  title     = {Introduction to statistical physics outside physics},
+  journal   = {Physica A},
+  year      = {2004},
+  volume    = {336},
+  number    = {1-2},
+  pages     = {1-5},
+  doi       = {10.1016/j.physa.2004.01.004},
+  owner     = {Vincent},
+  timestamp = {2022.08.30},
+}
+
 @InProceedings{Stauffer2011,
   author    = {Stauffer, D.},
   title     = {Statistical Physics for Humanities: A Tutorial},
@@ -43243,6 +43738,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1162/089892999563319},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Stickgold2001,
+  author    = {Stickgold, R. and Hobson, J. A. and Fosse, R. and Fosse, M.},
+  title     = {Sleep, Learning, and Dreams: Off-line Memory Reprocessing},
+  journal   = {Science},
+  year      = {2001},
+  volume    = {294},
+  number    = {5544},
+  pages     = {1052-1057},
+  doi       = {10.1126/science.1063530},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
 }
 
 @Article{Stiller2003,
@@ -45658,6 +46166,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=UT9dAAAAIAAJ},
 }
 
+@Article{Tulving1985,
+  author    = {Tulving, E.},
+  title     = {Memory and consciousness.},
+  journal   = {Canadian Psychology / Psychologie canadienne},
+  year      = {1985},
+  volume    = {26},
+  number    = {1},
+  pages     = {1-12},
+  doi       = {10.1037/h0080017},
+  owner     = {Vincent},
+  timestamp = {2022.08.11},
+}
+
 @InProceedings{Tunkelang1998,
   author    = {Tunkelang, D.},
   title     = {{JIGGLE}: Java Interactive Graph Layout Environment},
@@ -46585,6 +47106,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1592665.1592675},
   owner     = {Vincent},
   timestamp = {2017.06.04},
+}
+
+@TechReport{Vitevitch2005,
+  author      = {Vitevitch, M. S.},
+  title       = {Phonological neighbors in a small world: What can graph theory tell us about word learning?},
+  institution = {Department of Psychology, University of Kansas},
+  year        = {2005},
+  type        = {Unpublished Report},
+  owner       = {Vincent},
+  timestamp   = {2022.08.11},
+  url         = {https://cns.iu.edu/docs/netscitalks/vitevitch.pdf},
 }
 
 @Article{Vitevitch2008,
@@ -49607,7 +50139,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Yose2016,
-  author    = {Yose, J. and Kenna, R. and MacCarron, P. and Platini, T. and Tonra, J.},
+  author    = {Yose, J. and Kenna, R. and Mac Carron, P. and Platini, T. and Tonra, J.},
   title     = {A Networks-Science Investigation into the Epic Poems of {Ossian}},
   journal   = {Advances in Complex Systems},
   year      = {2016},
@@ -49619,7 +50151,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Yose2017,
-  author    = {Yose, J. and Kenna, R. and MacCarron, M. and MacCarron, P.},
+  author    = {Yose, J. and Kenna, R. and Mac Carron, M. and Mac Carron, P.},
   title     = {Network Analysis of the Viking Age in {Ireland} as portrayed in {Cogadh Gaedhel re Gallaibh}},
   journal   = {Royal Society Open Science},
   year      = {2018},
