--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -9297,6 +9297,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.utstat.toronto.edu/~brunner/oldclass/378f16/readings/CohenPower.pdf},
 }
 
+@Article{Cohen2003b,
+  author    = {Cohen, R. and Havlin, S.},
+  title     = {Scale-Free Networks are Ultrasmall},
+  journal   = {Physical Review Letters},
+  year      = {2003},
+  volume    = {90},
+  number    = {5},
+  pages     = {058701},
+  doi       = {10.1103/PhysRevLett.90.058701},
+  owner     = {Vincent},
+  timestamp = {2015.07.13},
+}
+
 @Book{Cohen2013,
   title     = {Applied Multiple Regression/Correlation Analysis for the Behavioral Sciences},
   publisher = {Routledge},
@@ -17670,7 +17683,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
   title       = {Towards a Computational Literary Science: A Computational Approach to Dickens' Dynamic Character Networks},
   institution = {Zenodo},
   year        = {2017},
-  doi         = {10.5281/zenodo.259499.},
+  doi         = {10.5281/zenodo.259499},
   owner       = {Vincent},
   timestamp   = {2017.12.02},
 }
@@ -25521,6 +25534,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.09},
 }
 
+@Article{Labatut2022,
+  author    = {Labatut, V.},
+  title     = {Complex Network Analysis of a Graphic Novel: The Case of the Bande Dessinée Thorgal},
+  journal   = {Advances in Complex Systems},
+  year      = {2022},
+  volume    = {25},
+  number    = {2},
+  pages     = {22400033},
+  doi       = {10.1142/S0219525922400033},
+  owner     = {Vincent},
+  timestamp = {2022.01.22},
+}
+
 @Article{Lacan1977,
   author    = {Lacan, J. and Miller, J.-A. and Hulbert, J.},
   title     = {Desire and the Interpretation of Desire in Hamlet},
@@ -26565,6 +26591,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Learning Multi-modal Representations of Narrative Multimedia: a Case Study of Webtoons},
   booktitle = {ACM International Conference on Research in Adaptive and Convergent Systems},
   year      = {2020},
+  pages     = {1-6},
   doi       = {10.1145/3400286.3418216},
   owner     = {Vincent},
   timestamp = {2020.10.20},
@@ -32029,6 +32056,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   review    = {arXiv: http://arxiv.org/abs/1606.00715},
   timestamp = {2016.06.03},
+}
+
+@Article{Molloy1995,
+  author    = {Molloy, M. and Reed, B.},
+  title     = {A critical point for random graphs with a given degree sequence},
+  journal   = {Random Structures and Algorithms},
+  year      = {1995},
+  volume    = {6},
+  number    = {2/3},
+  pages     = {161-179},
+  doi       = {10.1002/rsa.3240060204},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Book{Monaco1981,
